--- a/server/django/requirements.txt
+++ b/server/django/requirements.txt
@@ -1,23 +1,7 @@
-certifi==2017.7.27.1
-chardet==3.0.4
-coreapi==2.3.1
-coreschema==0.0.4
 Django==1.11.2
-django-allauth==0.33.0
-django-rest-auth==0.9.1
-django-rest-swagger==2.1.2
+django-cors-middleware==1.3.1
+django-extensions==1.9.1
 djangorestframework==3.6.4
-idna==2.6
-itypes==1.1.0
-Jinja2==2.9.6
-MarkupSafe==1.0
-oauthlib==2.0.4
-openapi-codec==1.3.2
-python-openid==2.2.5
+PyJWT==1.5.3
 pytz==2017.2
-requests==2.18.4
-requests-oauthlib==0.8.0
-simplejson==3.11.1
 six==1.11.0
-uritemplate==3.0.0
-urllib3==1.22
