--- a/client/NativeStarter/package.json
+++ b/client/NativeStarter/package.json
@@ -8,14 +8,17 @@
 	},
 	"dependencies": {
 		"native-base": "^2.3.2",
+		"prop-types": "^15.6.0",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.48.4",
 		"react-native-splash-screen": "^3.0.1",
 		"react-native-vector-icons": "^4.3.0",
 		"react-navigation": "^1.0.0-beta.11",
 		"react-redux": "^5.0.6",
+		"realm": "^1.12.0",
 		"redux": "^3.7.2",
 		"redux-logger": "^3.0.6",
+		"redux-saga": "^0.15.6",
 		"redux-thunk": "^2.2.0"
 	},
 	"devDependencies": {
